Bug 154828 - top-right circle flickering when hiding Dashboard
Summary: top-right circle flickering when hiding Dashboard
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-29 19:36 UTC by Unknown
Modified: 2008-01-10 22:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2007-12-29 19:36:06 UTC
Version:           revision 754191 (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc (GCC) 4.1.3 20070929 (prerelease) (Ubuntu 4.1.2-16ubuntu2) 
OS:                Linux

When I enter the Dashboard using the "Show Desktop" applet and then leave it using "Hide Dashboard" in the top-right corner, sometimes (i.e. only when the click is done not too far outside, but also not to far within the circle) this grey circle starts flickering as if I would constantly move the mouse out and in (it gets smaller and bigger very fast). As soon as I move the mouse out of this area (so it's either too far outside or too far inside), the flickering stops.
Comment 1 Alex Merry 2008-01-05 15:58:40 UTC
You can get the same effect when the zoom buttons are enabled without going into dashboard mode - it's caused by the way the hover checks work:

If the mouse is on a button, it counts as hovering on the toolbox, and the toolbox expands.

If the mouse is between the buttons, but not on the toolbox itself, it counts as not hovering on the toolbox, and the toolbox contracts.

The problem is that the contraction can move the buttons under the mouse, causing the toolbox to expand again, thereby moving the button out from under the mouse.  The result is repeated expansion and contraction of the toolbox.
Comment 2 Aaron J. Seigo 2008-01-10 22:06:14 UTC
SVN commit 759555 by aseigo:

nice solution for no flicker, no jerky hurkey jerky jerk in the toolbox; put an invisible item behind all the tools ;)

BUG:154828


 M  +57 -8     desktoptoolbox.cpp  
 M  +2 -1      desktoptoolbox_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=759555