nice solution for no flicker, no jerky hurkey jerky jerk in the toolbox; put an invisible item behind all the tools ;)

BUG:154828

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=759555